RESOLVED FIXED45057
animations/suspend-resume-animation.html does not pass when accelerated compositing is off
https://bugs.webkit.org/show_bug.cgi?id=45057
Summary animations/suspend-resume-animation.html does not pass when accelerated compo...
Mihai Parparita
Reported 2010-09-01 13:42:48 PDT
animations/suspend-resume-animation.html does not pass when accelerated compositing is off
Attachments
Patch (4.07 KB, patch)
2010-09-01 13:47 PDT, Mihai Parparita
no flags
Mihai Parparita
Comment 1 2010-09-01 13:47:13 PDT
Mihai Parparita
Comment 2 2010-09-01 13:50:34 PDT
Chris, do you mind reviewing this? This is in the code that you touched in http://trac.webkit.org/changeset/63862.
Chris Marrin
Comment 3 2010-09-01 17:19:19 PDT
Comment on attachment 66258 [details] Patch r=me
WebKit Commit Bot
Comment 4 2010-09-01 22:27:29 PDT
Comment on attachment 66258 [details] Patch Clearing flags on attachment: 66258 Committed r66641: <http://trac.webkit.org/changeset/66641>
WebKit Commit Bot
Comment 5 2010-09-01 22:27:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.