2010-09-01  Mihai Parparita  <mihaip@chromium.org>

Reviewed by Chris Marrin.

        animations/suspend-resume-animation.html does not pass when accelerated compositing is off
        https://bugs.webkit.org/show_bug.cgi?id=45057

        animations/suspend-resume-animation.html now passes with the Chromium DRT
        (it still fails with test_shell, since that doesn't have the suspend/resumeAnimations
        API implemented)

        * platform/chromium/drt_expectations.txt:
        * platform/chromium/test_expectations.txt:
2010-09-01  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by Chris Marrin.

        animations/suspend-resume-animation.html does not pass when accelerated compositing is off
        https://bugs.webkit.org/show_bug.cgi?id=45057

        Fix incorrect logic when resuming the animation (KeyframeAnimation::startAnimation
        and RenderLayerBacking::startAnimation return true when running an accelerated
        animation).

        * page/animation/AnimationBase.cpp:
        (WebCore::AnimationBase::updateStateMachine):

Canonical link: https://commits.webkit.org/57400@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66641 268f45cc-cd09-0410-ab3c-d52691b4dbfc